[metadata]
name = binread
version = 0.0.6
author = Remo Pas
author_email = remo.pas22@gmail.com
description = Reading complex binary data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/remopas/binread
project_urls = 
    Bug Tracker = https://github.com/remopas/binread/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
